--- a/Index.html
+++ b/Index.html
@@ -5,81 +5,86 @@
     <title></title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
+    <link href="<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet rel="stylesheet">
+    <img src="images/status_bar.png" class="status" alt="bar">
+    <nav>
+        <img src="images/icons8-back_filled.png" class="arrow" alt="back arrow">
+        <h1> Washington & State </h1>
+        <img src="images/icons8-filter_filled.png" class="filter" alt="filter">
+    </nav>
   </head>
   <body>
     <section class="container">
-      <nav>
-      </nav>
+     <section>
+       <img src="images/group.png" class="map" alt="bus map">
+     </section>
+     <section>
+       <p class="NextBus">Next Bus to Arrive</p>
+     </section>
+       <article>
+         <h2>Eastbond Routes</h2>
+         <p class="number">(#60)</p>
+         <p class="arrival">Arrived</p>
+         <p class="destination">Randolph/Harbor Dr.</p>
+         <p class="frequency">Every 20 mins</p>
+         <p class="Next2">(8:58,9:28...)</p><br>
+         <p class="number">(#124)</p>
+         <p class="arrival">2 Mins</p>
+         <p class="destination">Navy Pier</p>
+         <p class="frequency">Every 10 mins</p>
+         <p class="Next2">(9:00,9:10...)</p>
+        </article>
 
-      <div class="header">
-         <img src="images/icons8-back_filled.png" class="arrow" alt="back arrow">
-         <h1 class="headerfont"> Washington & State </h1>
-         <img src="images/icons8-filter_filled.png" class="filter" alt="filter">
-       </div>
-       <div>
-         <img src="images/group.png" class="map" alt="bus map">
-       </div>
+          <article>
+            <h2>Northbound Routes</h2>
+             <p class="number">(#151)</p>
+             <p class="arrival">8 Mins</p>
+             <p class="destination">Devon / Clark</p>
+             <p class="frequency">Every 20 mins</p>
+             <p class="Next2">(9:06,9:26...)</p>
+          </article>
 
-         <div class="icons">
-           <img src="images/icons8-bus_filled.png" class="bus" alt="bus number icon">
-           <img src="images/icons8-location_filled.png" class="stop" alt=" destination icon">
-           <img src="images/icons8-future_filled.png" class="time" alt="frequency icon">
-         </div>
-         <div class"iconword">
-           <p class="iconfont1"> Line </p>
-           <p class="iconfont2"> Destination </p>
-           <p class="iconfont3"> Frequency </p>
-          </div>
+          <article>
+            <h2>Southbound Routes</h2>
+            <p class="number">(#J14)</p>
+            <p class="arrival">12 Mins</p>
+            <p class="destination">103rd/Stony Island</p>
+            <p class="frequency">Every 15 mins</p>
+            <p class="Next2">(9:10,9:25...)</p><br>
+            <p class="number">(#124)</p>
+            <p class="arrival">17 Mins</p>
+            <p class="destination">Navy Pier</p>
+            <p class="frequency">Every 10 mins</p>
+            <p class="Next2">(9:15,9:25...)</p>
+          </article>
 
+          <article>
+            <h2>Reroute</h2>
+            <p class="number">(#6X)</p>
+            <p class="arrival">19 Mins</p>
+            <p class="destination">Jackson Park Express</p>
+            <p class="frequency">N/A</p>
+            <p class="Next2">(9:17)</p>
+          </article>
 
-          <div class="content">
-            <h2 class="heading">Eastbond Routes</h2>
-             <h3 class="line1">(#60)</h3>
-             <h3 class= "destination1">Randolph/Harbor Dr.</h3>
-             <h3 class="time1">20 Mins</h3>
-             <h3 class="line2">(#124)</h3>
-             <h3 class= "destination2">Navy Pier</h3>
-             <h3 class="time2">10 Mins</h3>
-          </div>
-
-          <div class="content">
-            <h2 class="heading">Northbound Routes</h2>
-             <h3 class="line3">(#151)</h3>
-             <h3 class= "destination3">Devon / Clark</h3>
-             <h3 class="time3">20 Mins</h3>
-          </div>
-
-          <div class="content">
-            <h2 class="heading">Southbound Routes</h2>
-             <h3 class="line4">(#J14)</h3>
-             <h3 class= "destination4">103rd / Stony Island </h3>
-             <h3 class="time4">15 Mins</h3>
-             <h3 class="line5">(#124)</h3>
-             <h3 class= "destination5">Navy Pier</h3>
-             <h3 class="time5">10 Mins</h3>
-          </div>
-
-        <div class="content">
-          <h2 class="heading"> Reroute</h2>
-           <h3 class="line6">(#6x)</h3>
-           <h3 class= "destination6">Jackson Park Express</h3>
-           <h3 class="time6">N/A</h3>
-        </div>
-
-          <div class="content">
-             <h2 class="heading">Out of Service</h2>
-             <h3 class="line7">(#4)</h3>
-             <h3 class= "destination7">Cottage Grove </h3>
-             <h3 class="time7">12:10am</h3>
-             <h3 class="line8">(#20)</h3>
-             <h3 class= "destination8">Madison</h3>
-             <h3 class="time8"> 12:10am</h3>
-             <h3 class="line9" >(#157)</h3>
-             <h3 class= "destination9">Steeterville / Taylor</h3>
-             <h3 class="time9"> 6:00am</h3>
-          </div>
+          <article>
+            <h2>Out of Service</h2>
+            <p class="number">(#4)</p>
+            <p class="arrival">N/A</p>
+            <p class="destination">Cottage Grove</p>
+            <p class="frequency">N/A</p>
+            <p class="Next2">Resumes 12:10am</p><br>
+            <p class="number">(#20)</p>
+            <p class="arrival">N/A</p>
+            <p class="destination">Madison</p>
+            <p class="frequency">N/A</p>
+            <p class="Next2">Resumes 12:10am</p><br>
+            <p class="number">(#157)</p>
+            <p class="arrival">N/A</p>
+            <p class="destination">Steeterville/Taylor</p>
+            <p class="frequency">N/A</p>
+            <p class="Next2">Resumes 6:00am</p>
+          </article>
     </section>
   </body>
 </html>
